# UR10

./: README.md
ObjTrack/: CMakeLists.txt  package.xml  setup.py
ObjTrack/config/: markerposition.yaml
ObjTrack/launch/: ur10_test.launch
ObjTrack/src/ObjTrack/: __init__.py  changes.txt  eef_tracking.py
aruco_pose_estimation/: CMakeLists.txt
aruco_pose_estimation/config/: usb_cam.yaml
aruco_pose_estimation/launch/: gazebo_recognition.launch  multi_markers.launch  single_marker.launch  zed.launch
aruco_pose_estimation/src/: pose_broadcaster.cpp
aruco_ros-kinetic-devel/aruco_ros/src/: marker_publish.cpp  simple_single.cpp
fiducials_tf/: CMakeLists.txt  package.xml
fiducials_tf/launch/: aruco_detect.launch  gazebo.launch
fiducials_tf/marker_image/aruco_visual_marker_0/: model.sdf
fiducials_tf/marker_image/aruco_visual_marker_1/: model.sdf
fiducials_tf/src/: pose_broadcaster.cpp
objtf/: CMakeLists.txt  package.xml
objtf/launch/: objtf_multi.launch  objtf_single.launch
objtf/src/: objtf.cpp
objtrack/: CMakeLists.txt  README.md  package.xml
objtrack/config/: markerposition.yaml
objtrack/src/objtrack/: eef_tracking.py
ur10_rmf/: CMakeLists.txt  package.xml  setup.py
ur10_rmf/config/: ur10_base.rviz
ur10_rmf/launch/: ur10_hardware.launch
ur10_rmf/src/ur10_rmf/: arm_manipulation.py  robot_manipulator_control.py
ur10_simulation/: CMakeLists.txt  package.xml
ur10_simulation/launch/: ur10.launch  ur10_gazebo.launch  ur10_upload.launch
ur10_simulation/meshes/collision/: end_effector.STL
ur10_simulation/meshes/visual/: end_effector.STL
ur10_simulation/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro
ur_simulation/ur_description/urdf/: ur10.urdf.xacro
ur_simulation/ur_gazebo/launch/: gazebo.launch  ur10.launch
